@@ -1,3 +1,10 @@
+2004-04-18  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/ssclme.c (ssclme_coef, ssclme_coefGets): Create consistency
+	in the order of unconstrained and constrained parameters.
+	(ssclme_gradient): Added the gradients (not yet correct for
+	multidimensional, unconstrained case).
+
 2004-04-14  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/ssclme.c (ssclme_EMsteps): Fix logic in REML update
